--- a/microblog/.env
+++ b/microblog/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=example_database_url
+DATABASE_URL="mysql+pymysql://root:password@localhost:3306/flaskdb"
 SECRET_KEY=example_secret_key
